# weekend-raytracer

./: CMakeLists.txt  README.md  build.sh  weekend-raytracer.sublime-project
include/: color.h  ray.h  vec3.h
include/bvh/: aabb.h  bvh_node.h
include/camera/: camera.h
include/material/: dielectric.h  diffuse_light.h  lambertian.h  material.h  metal.h
include/math/: math_common.h
include/shape/: hittable.h  hittable_list.h  sphere.h
include/texture/: image_texture.h  texture.h
src/: main.cpp
src/bvh/: aabb.cpp  bvh_node.cpp
src/camera/: camera.cpp
src/material/: dielectric.cpp  diffuse_light.cpp  lambertian.cpp  metal.cpp
src/shape/: hittable_list.cpp  sphere.cpp
src/texture/: image_texture.cpp
